--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
   "scripts": {
 
   },
-  "dependencies": {
-    "@alttiri/util-js": "1.10.2-20240603",
-    "@alttiri/util-node-js": "2.1.0-20240624"
-  },
   "devDependencies": {
+    "@alttiri/util-js": "1.10.2-20240603",
+    "@alttiri/util-node-js": "2.1.0-20240624",
     "@types/node": "20.12.12",
     "typescript": "5.5.3"
   }
