--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,4 +34,8 @@
 //    "allowImportingTsExtensions": true,
 //    "noEmit": true,
   },
+//  "include": [
+//    "src/**/*.ts",
+//    "index.ts",
+//  ]
 }
