--- a/package.json
+++ b/package.json
@@ -1,17 +1,50 @@
 {
   "name": "@alttiri/string-magic",
   "version": "0.1.0-20240707",
-  "main": "index.js",
-  "type": "module",
-  "keywords": ["string", "util", "url", "title", "hostname", "cleaner"],
-  "author": "gh.alttiri",
-  "license": "MIT",
   "description": "It's not a magic string, it's a string magic. Some util StringRule-driven functions do some string transformations.",
+  "license":  "MIT",
+  "author":   "gh.alttiri",
+  "homepage": "https://github.com/AlttiRi/string-magic",
+  "keywords": [
+    "string",
+    "util",
+    "url",
+    "title",
+    "hostname",
+    "cleaner"
+  ],
+  "type":    "module",
+  "main":    "index.js",
+  "typings": "index.d.ts",
+  "files": [
+    "src/**/*.js",
+    "src/**/*.d.ts",
+    "index.js",
+    "index.d.ts"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alttiri/string-magic.git"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
-
+    "compile-ts":       "tsc --build",
+    "compile-ts-watch": "tsc --build --watch",
+    "clean-ts":         "tsc --build --clean",
+    "#": "",
+    "publish-npm":  "npm publish --registry=https://registry.npmjs.org",
+    "publish-ghp":  "npm publish --registry=https://npm.pkg.github.com",
+    "test-publish": "npm pack",
+    "##": "",
+    "unpublish-npm": "npm unpublish @alttiri/string-magic@0.1.0-20240707 --registry=https://registry.npmjs.org",
+    "###": "",
+    "login-npm": "npm login --registry=https://registry.npmjs.org",
+    "login-ghp": "npm login --registry=https://npm.pkg.github.com"
   },
   "devDependencies": {
-    "@alttiri/util-js": "1.10.2-20240603",
+    "@alttiri/util-js":     "1.10.2-20240603",
     "@alttiri/util-node-js": "2.1.0-20240624",
     "@types/node": "20.12.12",
     "typescript": "5.5.3"
