--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,41 +1,39 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    },
-
-    // It very notable slow-downs the object instancing for the "target" is less than "ES2022" if is set to `true`.
-    "useDefineForClassFields": false,
-
-    "target": "es2020",
+    "target": "ES2020",
     "lib": ["ES2021", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "esModuleInterop":   true,
-    "isolatedModules":   true,
+
+    /* Library preset */
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "allowImportingTsExtensions": false,
+    "noEmit": false,
+    "declaration": true,
+
+    "useDefineForClassFields": false,
     "resolveJsonModule": true,
+    "isolatedModules": true,
+    "esModuleInterop": true,
     "skipLibCheck": true,
-
-    "strictNullChecks": true,
-    "strictPropertyInitialization": true,
-    "strictFunctionTypes": true,
-    "strictBindCallApply": true,
-    "alwaysStrict":     true,
-    "noImplicitAny":    true,
-    "noImplicitThis":   true,
-
     "allowJs": false,
 
-    "noEmit":      false,
-    "declaration": true,
-    "sourceMap":   false,
-
-//    "allowImportingTsExtensions": true,
-//    "noEmit": true,
+    "strict": true,
+    "strictNullChecks":    true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
+    "noFallthroughCasesInSwitch":   true,
+    "alwaysStrict":   true,
+    "noImplicitAny":  true,
+    "noImplicitThis": true,
   },
-//  "include": [
-//    "src/**/*.ts",
-//    "index.ts",
-//  ]
+  /* Library preset */
+  "include": [
+    "src/**/*.ts",
+    "index.ts",
+  ]
 }
+
+// Note:
+// `useDefineForClassFields` very notable slow-downs the object instancing
+// for the "target" is less than "ES2022" if is set to `true`.
